@@ -24,4 +24,4 @@ var_dump($num,$result[0]);
 ?>
 --EXPECT--
 int(100004313234244)
-string(15) "100004313234244"
+int(100004313234244)
